--- a/trunk/Common/esUtil.vcproj
+++ b/trunk/Common/esUtil.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="esUtil"
 	ProjectGUID="{47C93F52-AB4E-4FF9-8D4F-B38CD60A183F}"
 	RootNamespace="esUtil"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
