--- a/Examples/Example01/Example01.vcproj
+++ b/Examples/Example01/Example01.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="Example01"
 	ProjectGUID="{8278251F-6C1F-4D80-8499-FA7B590FAFE6}"
 	RootNamespace="Hello_Triangle"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -61,12 +62,14 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libEGL.lib libGLESv2.lib esUtil_d.lib"
+				AdditionalDependencies="libEGL.lib libGLESv2.lib esUtil_d.lib libjpeg.lib"
 				OutputFile="..\..\Bin\$(ProjectName).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\Common\Lib;..\..\Lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -87,9 +90,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -147,6 +147,8 @@
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -166,9 +168,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -226,6 +225,10 @@
 				</File>
 				<File
 					RelativePath=".\FileLoader.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Jpeg.cpp"
 					>
 				</File>
 			</Filter>
@@ -290,6 +293,10 @@
 				</File>
 				<File
 					RelativePath=".\FileLoader.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Jpeg.h"
 					>
 				</File>
 				<File
