--- a/trunk/Examples/Example01/Example01.vcproj
+++ b/trunk/Examples/Example01/Example01.vcproj
@@ -385,6 +385,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Mesh.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Texture.h"
 					>
 				</File>
